@@ -1,3 +1,10 @@
+2003-02-03  Bill Bumgarner  <bbum@codefab.com>
+    * Lib/Foundation/test/test_nsundomanager.py: Added integer test from
+      David Eppstein
+    * _convenience.py:  removed mapping of __repr__ to -description
+    * Cocoa-Python Document-based Application:  Fixed copy files phase and
+      references to PyObjC module.
+
 2003-02-02  Bill Bumgarner  <bbum@codefab.com>
     * Project Templates/clean.py: Added a simple script to clean the project
       template tree.
